<resources>
    <string name="app_name">TestTaskAvia</string>
    <string name="title_air_tickets">Авиабилеты</string>
    <string name="title_hotels">Отели</string>
    <string name="title_short">Короче</string>
    <string name="title_subscriptions">Подписки</string>
    <string name="title_profile">Профиль</string>
    <string name="air_tickets_top_text">Поиск дешевых\nавиабилетов</string>
    <string name="hint_from">Откуда - Москва</string>
    <string name="moskva">Москва</string>
    <string name="hint_where">Куда - Турция</string>
    <string name="turcia">Турция</string>
    <string name="air_tickets_senter_title">Музыкально отлететь</string>
    <string name="price_pattern">от %1$s ₽</string>
    <string name="price_pattern2">%1$s₽</string>
    <string name="title_search1">Сложный маршрут</string>
    <string name="title_search2">Куда угодно</string>
    <string name="title_search3">Выходные</string>
    <string name="title_search4">Горячие билеты</string>
    <string name="title_stambul">Стамбул</string>
    <string name="title_sochi">Сочи</string>
    <string name="title_phuket">Пхукет</string>
    <string name="title_popular_destination">Популярное направление</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_back">обратно</string>
    <string name="title_filter">фильтр</string>
    <string name="title_filter2">Фильтр</string>
    <string name="title_graph">График цен</string>
    <string name="title_straight_rails">Прямые рельсы</string>
    <string name="title_show_all">Показать все</string>
    <string name="title_show_all_tickets">Посмотреть все билеты</string>
    <string name="title_transfer">Без пересадок</string>
    <string name="slash">/</string>
    <string name="dash">—</string>
    <string name="title_travel_time">%1$sч в пути</string>
</resources>