<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_air_tickets"
        android:icon="@drawable/ic_air_tickets"
        android:title="@string/title_air_tickets" />

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/ic_hotels"
        android:title="@string/title_hotels" />

    <item
        android:id="@+id/navigation_short"
        android:icon="@drawable/ic_short"
        android:title="@string/title_short" />


    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_subscriptions"
        android:title="@string/title_subscriptions" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>