<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_air_tickets_flow">
    <include
        app:graph="@navigation/navigation_air_tickets_flow" />
    <navigation android:id="@+id/navigation_hotels_flow"
        app:startDestination="@id/navigation_hotels">
        <fragment
            android:id="@+id/navigation_hotels"
            android:name="com.example.testtaskavia.presentation.ui.HotelsFragment"
            android:label="@string/title_hotels"
            tools:layout="@layout/fragment_hotels" />
    </navigation>
    <navigation android:id="@+id/navigation_short_flow"
        app:startDestination="@id/navigation_short">
        <fragment
            android:id="@+id/navigation_short"
            android:name="com.example.testtaskavia.presentation.ui.ShortFragment"
            android:label="@string/title_short"
            tools:layout="@layout/fragment_short" />
    </navigation>
    <navigation android:id="@+id/navigation_subscriptions_flow"
        app:startDestination="@id/navigation_subscriptions">
        <fragment
            android:id="@+id/navigation_subscriptions"
            android:name="com.example.testtaskavia.presentation.ui.SubscriptionsFragment"
            android:label="@string/title_subscriptions"
            tools:layout="@layout/fragment_subscriptions" />
    </navigation>
    <navigation android:id="@+id/navigation_profile_flow"
        app:startDestination="@id/navigation_profile">
        <fragment
            android:id="@+id/navigation_profile"
            android:name="com.example.testtaskavia.presentation.ui.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile" />
    </navigation>
</navigation>